Fix contrast errors

--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ footer {
   padding-left: 25px;
   padding-right: 25px;
   padding-bottom: 15px;
-  background-color: #8fa786;
+  background-color: #7e9676;
 }
 
 footer img {
@@ -252,7 +252,7 @@ footer ul {
 footer a {
   text-decoration: none;
   color: #ffffff;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 400;
 }
 
@@ -277,7 +277,7 @@ footer a {
 
 .social a {
   font-size: 1.6rem;
-  color: #243521;
+  color: #000000;
 }
 
 hr {
@@ -292,7 +292,7 @@ hr {
 .footer-small {
   font-size: 1.2rem;
   text-align: center;
-  color: #52575adc;
+  color: #000000f1;
 }
 
 /*----------------------------------------------------- OUR STORY --------------------------------------------------*/
